--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="sticky-top" style="top:30px">
 				<center><h1><span id="shaan">shaan</span><span id="vaidya"> vaidya</h1></span>
 				<div class="img" id="image">
-						<img src="images/me1.jpeg" alt="Shaan" id="tp" class="img-responsive me" align="center">
+						<img src="images/me1.jpeg" alt="Shaan" id="tp" class="img-responsive me" align="center" title="... at a cafe in Old Town Stockholm">
 				</div>
 				<br>
 					<a href="mailto:shaan@cse.iitb.ac.in" align=center target="_blank">
