--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 				
 				<h3 class="heading">Publications</h3>
 				<h5>
+					Compositional Learning and Verification of Neural Network Controllers [<a href="papers/EMSOFT21.pdf" target="_blank">pdf</a>]<br> <i>Rajeev Alur, Osbert Bastani, Steve Hsu, Radoslav Ivanov, Kishor Jothimurugan, Shaan Vaidya</i> <br> <a href="https://esweek.org/emsoft/" target="_blank">EMSOFT 2021 </a>[<a href="" target="_blank">slides</a>]
+				</h5>
+				<h5>
 					Verification of Timed Asynchronous Programs [<a href="papers/AASV18.pdf" target="_blank">pdf</a>]<br> <i>Parosh Abdulla, Mohamed Faouzi Atig, Krishna S., Shaan Vaidya</i> <br> <a href="https://fsttcs.org" target="_blank">FSTTCS 2018 </a>[<a href="slides/slides-FSTTCS18.pdf" target="_blank">slides</a>]
 				</h5>
 				<hr>
