--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 			<div class="col-md-7"> <!--  style="border-left: 1px solid #ccc" -->
 				<h3 class="heading">About Me</h3>
 				<h5 align="justify">
-					I am a doctoral student at the department of <a href="https://www.cis.upenn.edu/" target="_blank">Computer and Information Science, University of Pennsylvania</a>, where I am advised by <a href="https://www.cis.upenn.edu/~alur/" target="_blank">Rajeev Alur</a>. 
-					Recently, I have been working on verification of neural network controllers for the <a href="https://f1tenth.org/" target="_blank">F1/10 autonomous vehicle testbed</a>. 
-					<br><br>
-					Before Penn, I was an undergraduate at the department of <a href="https://www.cse.iitb.ac.in" target="_blank">Computer Science, Indian Institute of Technology, Bombay</a>.
-					<br><br>
-                                        My current research interests include formal methods, programming languages, and machine learning.
-
+                                        I am a software engineer at <a href="https://www.glean.com" target="_blank">Glean</a>.
+                                        I began a doctoral program in <a href="https://www.cis.upenn.edu/" target="_blank">Computer and Information Science at the University of Pennsylvania</a>, where I was advised by <a href="https://www.cis.upenn.edu/~alur/" target="_blank">Rajeev Alur</a>, and eventually mastered out.
+                                        During my time at Penn I worked on verification of neural network controllers for the <a href="https://f1tenth.org/" target="_blank">F1/10 autonomous vehicle testbed</a>.
                                         <br><br>
-                                        I also built a <a href="https://shaanvaidya.github.io/SanFranciscoStreetTreeMap/" target="_blank">street tree map of San Francisco</a>.
+                                        Before Penn, I was an undergraduate at the department of <a href="https://www.cse.iitb.ac.in" target="_blank">Computer Science, Indian Institute of Technology, Bombay</a>.
+                                        <br><br>
+                                        I love birding, cooking, baking, ice cream making, backpacking, and vibe chasing in no particular order.
+                                        <br><br>
+                                        In my free time, I've been building a <a href="https://shaanvaidya.github.io/SanFranciscoStreetTreeMap/" target="_blank">better map of San Francisco's street trees</a>.
 
                                 </h5>
 				<hr>
