--- a/index.html
+++ b/index.html
@@ -21,23 +21,21 @@
 						<img src="images/me1.jpeg" alt="Shaan" id="tp" class="img-responsive me" align="center" title="... at a cafe in Old Town Stockholm">
 				</div>
 				<br>
-					<a href="mailto:shaan@cse.iitb.ac.in" align=center target="_blank">
+                                        <a href="mailto:spvaidya1497@gmail.com" align=center target="_blank">
 				    	<img title="Mail" alt="Mail" src="assets/mail.svg" class="social"/>
 				  	</a>
 				    &nbsp &nbsp
 				    <a href="https://www.github.com/shaanvaidya" align=center target="_blank">
 				    	<img title="Github" alt="Github" src="assets/github.svg" class="social"/>
 				    </a>
-				    &nbsp &nbsp
-				    <a href="https://www.facebook.com/shaan.vaidya.221B?fref=ts" align=center target="_blank">
-				    	<img title="Facebook" alt="Facebook" src="assets/facebook.svg" class="social" />
-				    </a>
-				    &nbsp &nbsp
-					<a href="https://www.twitter.com/ShaanVaidya" align=center target="_blank">
-						<img title="Twitter" alt="Twitter" src="assets/twitter.svg" class="social" />
-					</a>
-			    </center>
-				</div>
+                                    &nbsp &nbsp
+                                    <a href="https://www.linkedin.com/in/shaan-vaidya/" align=center target="_blank">
+                                        <img title="LinkedIn" alt="LinkedIn" src="assets/linkedin.svg" class="social" />
+                                    </a>
+                                    <br><br>
+                                    <button id="dark-mode-toggle" class="btn btn-sm btn-outline-secondary">Toggle Dark Mode</button>
+                            </center>
+                                </div>
 			</div>
 			<div class="col-md-7"> <!--  style="border-left: 1px solid #ccc" -->
 				<h3 class="heading">About Me</h3>
@@ -55,17 +53,6 @@
                                 </h5>
 				<hr>
 				
-				<h3 class="heading">Publications</h3>
-				<h5>
-					Compositional Learning and Verification of Neural Network Controllers [<a href="papers/EMSOFT21.pdf" target="_blank">pdf</a>]<br> <i>Rajeev Alur, Osbert Bastani, Steve Hsu, Radoslav Ivanov, Kishor Jothimurugan, Shaan Vaidya</i> <br> <a href="https://esweek.org/emsoft/" target="_blank">EMSOFT 2021 </a>[<a href="" target="_blank">slides</a>]
-				</h5>
-				<h5>
-					Verification of Timed Asynchronous Programs [<a href="papers/AASV18.pdf" target="_blank">pdf</a>]<br> <i>Parosh Abdulla, Mohamed Faouzi Atig, Krishna S., Shaan Vaidya</i> <br> <a href="https://fsttcs.org" target="_blank">FSTTCS 2018 </a>[<a href="slides/slides-FSTTCS18.pdf" target="_blank">slides</a>]
-				</h5>
-				<hr>
-				<a href="cv.pdf" target="_blank">
-					<h3 class="heading">CV</h3>
-				</a>
 				<!-- <hr>
 				<h3 class="heading">Presentations, Reports, Scribes</h3>
 				<h5>
@@ -96,6 +83,12 @@
 			<li>automata theory, timed automata, logic in CS
 		    </ul>
 		</h5>
-		<hr> -->
+                <hr> -->
+        <script>
+            const toggle = document.getElementById('dark-mode-toggle');
+            toggle.addEventListener('click', () => {
+                document.body.classList.toggle('dark-mode');
+            });
+        </script>
 </body>
 </html>
