Revert "Update personal details on homepage"

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 			<div class="col-md-7"> <!--  style="border-left: 1px solid #ccc" -->
 				<h3 class="heading">About Me</h3>
 				<h5 align="justify">
-                                        I’m a software engineer at <a href="https://www.glean.com" target="_blank">Glean</a>.
-                                        In a past life, I started a PhD in <a href="https://www.cis.upenn.edu/" target="_blank">Computer and Information Science at the University of Pennsylvania</a>, advised by <a href="https://www.cis.upenn.edu/~alur/" target="_blank">Rajeev Alur</a>, where I worked on verifying neural network controllers for autonomous vehicles.
-                                        I eventually wrapped that chapter up with a master’s and moved on.
+                                        I am a software engineer at <a href="https://www.glean.com" target="_blank">Glean</a>.
+                                        I began a doctoral program in <a href="https://www.cis.upenn.edu/" target="_blank">Computer and Information Science at the University of Pennsylvania</a>, where I was advised by <a href="https://www.cis.upenn.edu/~alur/" target="_blank">Rajeev Alur</a>, and eventually mastered out.
+                                        During my time at Penn I worked on verification of neural network controllers for the <a href="https://f1tenth.org/" target="_blank">F1/10 autonomous vehicle testbed</a>.
                                         <br><br>
-                                        Before that, I studied <a href="https://www.cse.iitb.ac.in" target="_blank">Computer Science</a> as an undergrad at IIT Bombay.
+                                        Before Penn, I was an undergraduate at the department of <a href="https://www.cse.iitb.ac.in" target="_blank">Computer Science, Indian Institute of Technology, Bombay</a>.
                                         <br><br>
-                                        Outside of work, I love birding, cooking, baking, ice cream making, backpacking, and vibe chasing (not necessarily in that order).
+                                        I love birding, cooking, baking, ice cream making, backpacking, and vibe chasing in no particular order.
                                         <br><br>
-                                        Lately, I’ve been building a <a href="https://shaanvaidya.github.io/SanFranciscoStreetTreeMap/" target="_blank">better map of San Francisco’s street trees</a>.
+                                        In my free time, I've been building a <a href="https://shaanvaidya.github.io/SanFranciscoStreetTreeMap/" target="_blank">better map of San Francisco's street trees</a>.
 
                                 </h5>
 				<hr>
