--- a/index.html
+++ b/index.html
@@ -21,21 +21,17 @@
 						<img src="images/me1.jpeg" alt="Shaan" id="tp" class="img-responsive me" align="center" title="... at a cafe in Old Town Stockholm">
 				</div>
 				<br>
-					<a href="mailto:shaan@cse.iitb.ac.in" align=center target="_blank">
+					<a href="mailto:spvaidya1497@gmail.com" align=center target="_blank">
 				    	<img title="Mail" alt="Mail" src="assets/mail.svg" class="social"/>
 				  	</a>
 				    &nbsp &nbsp
-				    <a href="https://www.github.com/shaanvaidya" align=center target="_blank">
-				    	<img title="Github" alt="Github" src="assets/github.svg" class="social"/>
+				    <a href="https://www.linkedin.com/in/shaan-vaidya/" align=center target="_blank">
+				    	<img title="LinkedIn" alt="LinkedIn" src="assets/linkedin.svg" class="social" />
 				    </a>
 				    &nbsp &nbsp
-				    <a href="https://www.facebook.com/shaan.vaidya.221B?fref=ts" align=center target="_blank">
-				    	<img title="Facebook" alt="Facebook" src="assets/facebook.svg" class="social" />
+				    <a href="https://www.instagram.com/shaanvaidya/" align=center target="_blank">
+				    	<img title="Instagram" alt="Instagram" src="assets/instagram.svg" class="social" />
 				    </a>
-				    &nbsp &nbsp
-					<a href="https://www.twitter.com/ShaanVaidya" align=center target="_blank">
-						<img title="Twitter" alt="Twitter" src="assets/twitter.svg" class="social" />
-					</a>
 			    </center>
 				</div>
 			</div>
