--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 
 <body>
 	<button id="dark-mode-toggle" class="theme-toggle" aria-label="Toggle dark mode">
-		<i class="fas fa-sun"></i>
 		<i class="fas fa-moon"></i>
 	</button>
-
 	<main class="container">
 		<div class="profile-section">
 			<header class="profile-header">
@@ -64,28 +62,36 @@
 	</main>
 
 	<script>
-		const toggle = document.getElementById('dark-mode-toggle');
-
 		// Check for system preference
 		const prefersDark = window.matchMedia('(prefers-color-scheme: dark)');
+		const darkModeToggle = document.getElementById('dark-mode-toggle');
+		const icon = darkModeToggle.querySelector('i');
 
 		// Set initial theme based on system preference
 		if (prefersDark.matches) {
 			document.body.classList.add('dark-mode');
+			icon.classList.replace('fa-moon', 'fa-sun');
 		}
 
 		// Listen for system preference changes
 		prefersDark.addEventListener('change', (e) => {
 			if (e.matches) {
 				document.body.classList.add('dark-mode');
+				icon.classList.replace('fa-moon', 'fa-sun');
 			} else {
 				document.body.classList.remove('dark-mode');
+				icon.classList.replace('fa-sun', 'fa-moon');
 			}
 		});
 
-		// Handle manual toggle
-		toggle.addEventListener('click', () => {
+		// Toggle dark mode manually
+		darkModeToggle.addEventListener('click', () => {
 			document.body.classList.toggle('dark-mode');
+			if (document.body.classList.contains('dark-mode')) {
+				icon.classList.replace('fa-moon', 'fa-sun');
+			} else {
+				icon.classList.replace('fa-sun', 'fa-moon');
+			}
 		});
 	</script>
 </body>
