--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		<div class="profile-section">
 			<header class="profile-header">
 				<div class="profile-image">
-					<img src="images/me1.jpeg" alt="Shaan at a cafe in Old Town Stockholm" class="profile-photo">
+					<img src="images/me1.jpeg" alt="... at a cafe in Old Town Stockholm"
+						title="... at a cafe in Old Town Stockholm" class="profile-photo">
 				</div>
 				<nav class="social-links">
 					<a href="mailto:spvaidya1497@gmail.com" aria-label="Email">
