--- a/index.html
+++ b/index.html
@@ -5,10 +5,47 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Shaan Vaidya</title>
+	<meta name="description"
+		content="Personal website of Shaan Vaidya, software engineer at Glean. Features projects including the San Francisco Street Tree Map - an interactive visualization of San Francisco's urban forest.">
+	<meta name="keywords"
+		content="Shaan Vaidya, software engineer, San Francisco Street Tree Map, urban forestry, data visualization">
 	<link rel="icon" href="assets/favicon-bolt.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+	<!-- Open Graph tags -->
+	<meta property="og:title" content="Shaan Vaidya">
+	<meta property="og:description"
+		content="Software engineer at Glean. Creator of the San Francisco Street Tree Map - an interactive visualization of San Francisco's urban forest.">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://shaanvaidya.github.io">
+
+	<!-- Twitter Card tags -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Shaan Vaidya">
+	<meta name="twitter:description"
+		content="Software engineer at Glean. Creator of the San Francisco Street Tree Map - an interactive visualization of San Francisco's urban forest.">
+
+	<!-- Structured Data -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "Person",
+		"name": "Shaan Vaidya",
+		"url": "https://shaanvaidya.github.io",
+		"jobTitle": "Software Engineer",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "Glean"
+		},
+		"sameAs": [
+			"https://github.com/shaanvaidya",
+			"https://www.linkedin.com/in/shaan-vaidya/",
+			"https://shaanvaidya.github.io/SanFranciscoStreetTreeMap/"
+		]
+	}
+	</script>
 </head>
 
 <body>
