Update email address on main page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						title="... at a cafe in Old Town Stockholm" class="profile-photo">
 				</div>
 				<nav class="social-links">
-					<a href="mailto:spvaidya1497@gmail.com" aria-label="Email">
+                                        <a href="mailto:me@shaanvaidya.com" aria-label="Email">
 						<i class="fas fa-envelope social-icon"></i>
 					</a>
 					<a href="https://www.linkedin.com/in/shaan-vaidya/" aria-label="LinkedIn">
